--- a/style.css
+++ b/style.css
@@ -1,24 +1,35 @@
 /* Heading */
 h1 {
 	color: black;
-	margin: 3em;
+	margin: 2em;
 }
 header {
 	background-color: #abe6da;
-	padding: .2em;
+	border: 4px solid black;
 	text-align: center;
 	font-style: normal;
 	font-size: 20px;
 	font-family: helvetica;
 }
 /* Body */
+h2 {
+	margin:none;
+}
 
  /* Images */
 
 img {
+	
 	border: 1px solid red;
- 	margin: .5em;
-	float: left;
-  	width: 15%; /* three boxes (use 25% for four, and 50% for two, etc) */
-  	padding: 20px; /* if you want space between the images */
+	padding: 2em;
+	margin: 1em 0 8em 0;
+	
+	width: 30%;
+ 	
+ 
+}
+.flexcontainer {
+	display: flex;
+	flex-direction: column;
+	margin-left: 30em;
 }
