--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 h1 {
 	color: black;
 	margin: 2em;
-}
+	}
 header {
 	background-color: #abe6da;
 	border: 4px solid black;
@@ -10,26 +10,21 @@ header {
 	font-style: normal;
 	font-size: 20px;
 	font-family: helvetica;
-}
+	}
 /* Body */
 h2 {
-	margin:none;
-}
+	margin-top: 2em;
+	font-size: 15px;
+	text-align: center;
+	}
 
  /* Images */
-
 img {
-	
-	border: 1px solid red;
-	padding: 2em;
-	margin: 1em 0 8em 0;
-	
-	width: 30%;
- 	
- 
-}
+	padding: 3em;
+	width: 80%;
+	}
 .flexcontainer {
 	display: flex;
-	flex-direction: column;
-	margin-left: 30em;
-}
+	flex-direction: row;
+	margin-left: 10em;
+	}
